refine interface of relative files