@@ -25,14 +25,10 @@ import uk.ac.ox.oxfish.model.FishState;
 import uk.ac.ox.oxfish.model.market.MarketMapFromPriceFileFactory;
 import uk.ac.ox.oxfish.model.regs.factory.NoFishingFactory;
 import uk.ac.ox.oxfish.model.scenario.EpoBiomassScenario;
-import uk.ac.ox.oxfish.model.scenario.InputFile;
-import uk.ac.ox.oxfish.model.scenario.RootFolder;
-
-import java.nio.file.Paths;
+import uk.ac.ox.oxfish.model.scenario.InputPath;
 
 import static org.apache.logging.log4j.Level.DEBUG;
 import static org.junit.Assert.assertEquals;
-import static uk.ac.ox.oxfish.model.scenario.EpoScenario.INPUT_PATH;
 import static uk.ac.ox.oxfish.model.scenario.EpoScenario.TARGET_YEAR;
 import static uk.ac.ox.oxfish.utility.CsvLogger.addCsvLogger;
 
@@ -49,13 +45,16 @@ public class FadAwareLogisticGrowerTest {
 
         final EpoBiomassScenario scenario = new EpoBiomassScenario();
         scenario.useDummyData();
-        scenario.setMarketMapFactory(new MarketMapFromPriceFileFactory(INPUT_PATH.resolve("prices.csv"), TARGET_YEAR));
+        scenario.setMarketMapFactory(
+            new MarketMapFromPriceFileFactory(
+                scenario.getSpeciesCodesSupplier(),
+                scenario.getInputFolder().path("prices.csv"),
+                TARGET_YEAR
+            )
+        );
         scenario.getExogenousCatchesFactory()
             .setCatchesFile(
-                new InputFile(
-                    new RootFolder(Paths.get("inputs", "tests")),
-                    "exogenous_catches.csv"
-                )
+                InputPath.of("inputs", "tests", "exogenous_catches.csv")
             );
         scenario.setRegulationsFactory(new NoFishingFactory());
 
